Correct a layout issue on collection content rhs items margin-bottom

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4949,5 +4949,18 @@ div.line_sheet_item {
 .send_draft {background-color:#000000!important;}
 .fe_footer a.confirm_order.send_order {background:#23c1ea!important;}
 
+.scroll-content {
+	padding-bottom: 65px;
+}
+
+.list-ios {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.collection_item_part{
+	margin-bottom:16px;
+}
+
 /*  ********** END style.css **********  */
 
